--- a/kubespray/master/cloud_init_m2.cfg
+++ b/kubespray/master/cloud_init_m2.cfg
@@ -29,12 +29,19 @@ runcmd:
   - sed -i 's/^SELINUX=.*/SELINUX=disabled/g' /etc/selinux/config
   - sed -i 's/^SELINUX=.*/SELINUX=disabled/g' /etc/sysconfig/selinux
   - echo "net.ipv4.ip_forward = 1" > /usr/lib/sysctl.d/50-kubespray.conf
-  - yum -y remove cloud-init
+#- yum -y remove cloud-init
   - yum -y install epel-release
   - yum -y install vim-enhanced
   - yum -y install python3-pip
   - yum -y install lvm2
   - yum -y install gdisk
+  - rpm --import https://www.elrepo.org/RPM-GPG-KEY-elrepo.org
+  - yum -y install https://www.elrepo.org/elrepo-release-8.el8.elrepo.noarch.rpm
+  - yum -y --enablerepo=elrepo-kernel install kernel-ml
+  - yum -y update
   - rm -r /etc/sysconfig/network-scripts/ifcfg-ens3
   - systemctl disable kdump
+  - touch /etc/cloud/cloud-init.disabled
+  - grub2-set-default 0
+  - grub2-mkconfig -o /boot/grub2/grub.cfg
   - reboot
