--- a/kubespray/control/cloud_init_c2.cfg
+++ b/kubespray/control/cloud_init_c2.cfg
@@ -1,6 +1,6 @@
 #cloud-config
-hostname: k8w01
-fqdn: k8w01.kube.local
+hostname: k8c02
+fqdn: k8c02.kube.local
 users:
   - name: fritchie
     ssh-authorized-keys:
@@ -17,7 +17,7 @@ write_files:
       BOOTPROTO="none"
       ONBOOT="yes"
       PREFIX="24"
-      IPADDR="192.168.0.111"
+      IPADDR="192.168.0.102"
       GATEWAY="192.168.0.1"
       DEFROUTE="yes"
       DNS1="8.8.8.8"
@@ -39,7 +39,7 @@ runcmd:
   - yum -y install https://www.elrepo.org/elrepo-release-8.el8.elrepo.noarch.rpm
   - yum -y --enablerepo=elrepo-kernel install kernel-ml
   - yum -y update
-  - rm -f /etc/sysconfig/network-scripts/ifcfg-ens3
+  - rm -r /etc/sysconfig/network-scripts/ifcfg-ens3
   - systemctl disable kdump
   - touch /etc/cloud/cloud-init.disabled
   - grub2-set-default 0
