--- a/kubespray/node/cloud_init_n1-c7.cfg
+++ b/kubespray/node/cloud_init_n1-c7.cfg
@@ -1,6 +1,6 @@
 #cloud-config
-hostname: k8m02
-fqdn: k8m02.kube.local
+hostname: k8n01
+fqdn: k8n01.kube.local
 users:
   - name: fritchie
     ssh-authorized-keys:
@@ -21,7 +21,7 @@ write_files:
       BOOTPROTO="none"
       ONBOOT="yes"
       PREFIX="24"
-      IPADDR="192.168.0.102"
+      IPADDR="192.168.0.111"
       GATEWAY="192.168.0.1"
       DEFROUTE="yes"
   - path: /etc/profile.d/kube.sh
@@ -38,6 +38,7 @@ runcmd:
   - yum -y install python3-pip
   - yum -y install lvm2
   - yum -y install gdisk
+#- yum -y install lvm2
 #- rpm --import https://www.elrepo.org/RPM-GPG-KEY-elrepo.org
 #- yum -y install https://www.elrepo.org/elrepo-release-7.0-4.el7.elrepo.noarch.rpm
 #- yum --enablerepo=elrepo-kernel install kernel-ml -y
