--- a/kubespray/node/cloud_init_n2.cfg
+++ b/kubespray/node/cloud_init_n2.cfg
@@ -1,6 +1,6 @@
 #cloud-config
-hostname: k8m02
-fqdn: k8m02.kube.local
+hostname: k8n02
+fqdn: k8n02.kube.local
 users:
   - name: fritchie
     ssh-authorized-keys:
@@ -17,7 +17,7 @@ write_files:
       BOOTPROTO="none"
       ONBOOT="yes"
       PREFIX="24"
-      IPADDR="192.168.0.102"
+      IPADDR="192.168.0.112"
       GATEWAY="192.168.0.1"
       DEFROUTE="yes"
       DNS1="8.8.8.8"
@@ -29,6 +29,7 @@ runcmd:
   - sed -i 's/^SELINUX=.*/SELINUX=disabled/g' /etc/selinux/config
   - sed -i 's/^SELINUX=.*/SELINUX=disabled/g' /etc/sysconfig/selinux
   - echo "net.ipv4.ip_forward = 1" > /usr/lib/sysctl.d/50-kubespray.conf
+#- echo "vm.nr_hugepages = 512" >> /usr/lib/sysctl.d/50-kubespray.conf
 #- yum -y remove cloud-init
   - yum -y install epel-release
   - yum -y install vim-enhanced
@@ -39,7 +40,7 @@ runcmd:
   - yum -y install https://www.elrepo.org/elrepo-release-8.el8.elrepo.noarch.rpm
   - yum -y --enablerepo=elrepo-kernel install kernel-ml
   - yum -y update
-  - rm -r /etc/sysconfig/network-scripts/ifcfg-ens3
+  - rm -f /etc/sysconfig/network-scripts/ifcfg-ens3
   - systemctl disable kdump
   - touch /etc/cloud/cloud-init.disabled
   - grub2-set-default 0
