--- a/kubespray/node/cloud_init_n3-c7.cfg
+++ b/kubespray/node/cloud_init_n3-c7.cfg
@@ -1,6 +1,6 @@
 #cloud-config
-hostname: k8w02
-fqdn: k8w02.kube.local
+hostname: k8n03
+fqdn: k8n03.kube.local
 users:
   - name: fritchie
     ssh-authorized-keys:
@@ -21,7 +21,7 @@ write_files:
       BOOTPROTO="none"
       ONBOOT="yes"
       PREFIX="24"
-      IPADDR="192.168.0.112"
+      IPADDR="192.168.0.113"
       GATEWAY="192.168.0.1"
       DEFROUTE="yes"
   - path: /etc/profile.d/kube.sh
