--- a/kubespray/node/cloud_init_n3.cfg
+++ b/kubespray/node/cloud_init_n3.cfg
@@ -1,6 +1,6 @@
 #cloud-config
-hostname: k8m03
-fqdn: k8m03.kube.local
+hostname: k8n03
+fqdn: k8n03.kube.local
 users:
   - name: fritchie
     ssh-authorized-keys:
@@ -17,7 +17,7 @@ write_files:
       BOOTPROTO="none"
       ONBOOT="yes"
       PREFIX="24"
-      IPADDR="192.168.0.103"
+      IPADDR="192.168.0.113"
       GATEWAY="192.168.0.1"
       DEFROUTE="yes"
       DNS1="8.8.8.8"
@@ -29,6 +29,7 @@ runcmd:
   - sed -i 's/^SELINUX=.*/SELINUX=disabled/g' /etc/selinux/config
   - sed -i 's/^SELINUX=.*/SELINUX=disabled/g' /etc/sysconfig/selinux
   - echo "net.ipv4.ip_forward = 1" > /usr/lib/sysctl.d/50-kubespray.conf
+#- echo "vm.nr_hugepages = 512" >> /usr/lib/sysctl.d/50-kubespray.conf
 #- yum -y remove cloud-init
   - yum -y install epel-release
   - yum -y install vim-enhanced
